# fastboundlessbpe

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  deny.toml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark_export.py  compare_implementations.py  example_usage.py  test_inference.py  test_rust_comparison.py  train_boundless.py  train_super.py  train_word.py  verify_hf.py  verify_hf_training.py  verify_tiktoken.py
python/boundlessbpe/: README.md  README_pretokenizer.md  __init__.py  allngramcnt.py  export.py  inference.py  inferencedata.py  ngram_split.py  pretokenize.py  regexconstants.py  script_data.py  train.py  util.py  vocabulary.py
python/tests/: __init__.py  test_export.py  test_picky_double_deletion.py  test_pretokenize.py  test_pretokenize_gpt4o.py
src/: byte_encoding.rs  constants.rs  error.rs  inference_data.rs  lib.rs  pretokenize.rs  script_data.rs  tokenizer.rs  trainer.rs  training_types.rs  vocabulary.rs
tests/: test_parity.rs
unicode_data/: generate_script_data.py  script_stats.txt
