[package]
name = "boundlessbpe"
version = "0.1.0"
edition = "2021"
authors = ["Craig Schmidt", "Kensho Technologies, LLC."]
description = "Fast Rust implementation of BoundlessBPE tokenizer with Python bindings"
license = "Apache-2.0"

[lib]
name = "boundlessbpe"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
fancy-regex = "0.14"
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
priority-queue = "2.1"

[features]
default = ["python-bindings"]
python-bindings = ["pyo3"]


