[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "boundlessbpe"
version = "0.1.0"
description = "Fast Rust implementation of the BoundlessBPE tokenizer with Python bindings"
readme = "README.md"
authors = [
    {name = "Craig Schmidt"},
    {name = "Kensho Technologies, LLC."},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
keywords = ["tokenizer", "bpe", "boundlessbpe", "nlp", "tokenization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "regex",
    "heapdict",
]

[project.urls]
Homepage = "https://github.com/kensho-technologies/fastboundlessbpe"
Repository = "https://github.com/kensho-technologies/fastboundlessbpe"
Paper = "https://arxiv.org/abs/2604.05192"
"BoundlessBPE Paper" = "https://arxiv.org/abs/2504.00178"

[project.optional-dependencies]
test = ["pytest", "numpy"]
dev = ["mypy"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"